fix navbar alignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -73,6 +73,9 @@ box-shadow: none;
     margin-bottom: 0px;
     padding: 10px 5px;
     min-height: 0;
+    
+    display: flex;
+    align-items: center;
 }
 
 button.navbar-toggle .ion-navicon {
